# bevy_gaussian_splatting

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: bench.yml  build.yml  clippy.yml  deploy-pages.yml  semver.yml  test.yml  todo_tracker.yml
assets/: .gitkeep  example.gscene  scene.json
assets/pbr/Poliigon_BrickWallReclaimed_8320/: Poliigon_BrickWallReclaimed_8320_Displacement.tiff
assets/pbr/Poliigon_GrassPatchyGround_4585/: Poliigon_GrassPatchyGround_4585_Displacement.tiff
assets/scenes/: cube.glb  monkey.glb  test.ply
benches/: io.rs
docs/: CREDITS.md  TOOLING.md  credits.md
examples/: headless.rs  mesh_to_cloud.rs  minimal.rs  multi_camera.rs  relighting.rs
examples/mesh_to_cloud/: Cargo.toml
examples/mesh_to_cloud/src/: main.rs
examples/relighting/: camera_controller.rs
src/: camera.rs  gaussian.rs  lib.rs  main.rs  ply.rs  utils.rs
src/gaussian/: cloud.rs  cloud_4d.rs  covariance.rs  f16.rs  f32.rs  interface.rs  iter.rs  mod.rs  packed.rs  rand.rs  settings.rs
src/gaussian/formats/: cloud_3d.rs  cloud_3d_lod.rs  cloud_4d.rs  cloud_4d_hierarchy.rs  mod.rs  planar_3d.rs  planar_3d_quantized.rs  planar_3d_spz.rs  planar_4d.rs  planar_4d_hierarchy.rs  spacetime.rs
src/io/: codec.rs  gscene.rs  loader.rs  mod.rs  ply.rs  scene.rs  writer.rs
src/io/gcloud/: bincode2.rs  flexbuffers.rs  mod.rs  rkyv.rs  texture.rs
src/material/: classification.rs  classification.wgsl  depth.rs  depth.wgsl  gaussian_material.rs  mod.rs  noise.rs  optical_flow.rs  optical_flow.wgsl  position.rs  solari.rs  solari.wgsl  spherical_harmonics.rs  spherical_harmonics.wgsl  spherindrical_harmonics.rs  spherindrical_harmonics.wgsl
src/math/: mod.rs
src/mesh/: mod.rs  proxy.rs
src/morph/: interpolate.rs  interpolate.wgsl  mod.rs  particle.rs  particle.wgsl  wavelet.wgsl
src/noise/: mod.rs  noise.wgsl
src/pbr_decomposition/: mod.rs  orchestrator.rs  settings.rs  synthetic_views.rs  types.rs
src/pbr_decomposition/material_separation/: pipeline.rs
src/pbr_decomposition/normal_estimation/: pipeline.rs
src/pbr_decomposition/shaders/: material_separation.wgsl  normal_estimation.wgsl  spatial_hash.wgsl  synthetic_views.wgsl
src/pbr_decomposition/spatial_hash/: pipeline.rs
src/pbr_decomposition/synthetic_views/: pipeline.rs
src/query/: mod.rs  raycast.rs  select.rs  sparse.rs
src/render/: bindings.wgsl  color.wgsl  gaussian.wgsl  gaussian_2d.wgsl  gaussian_3d.wgsl  gaussian_4d.wgsl  helpers.wgsl  mod.rs  packed.rs  packed.wgsl  planar.rs  planar.wgsl  radix.wgsl  solari.rs  sort.rs  sort.wgsl  spherical_harmonics.wgsl  surfel.wgsl  texture.rs  texture.wgsl  transform.wgsl
src/render/morph/: mod.rs  morph.wgsl  particle.rs  particle.wgsl  wavelet.rs
src/render/sort/: mod.rs  radix.rs  radix.wgsl  rayon.rs
src/sort/: mod.rs  radix.rs  radix.wgsl  rayon.rs  std.rs  std_sort.rs  temporal.wgsl
src/stream/: mod.rs  slice.rs
src/surfel/: mod.rs  surfel.wgsl
tests/: gaussian.rs  headless_examples.rs  io.rs  khr_loader_conformance.rs  radix.rs  visibility_render.rs
tests/fixtures/khr_gaussian_splatting/: khr_conformance_matrix.glb  khr_conformance_matrix.gltf  khr_extensible_fallback.gltf
tests/gpu/: _harness.rs  gaussian.rs  radix.rs
tools/: README.md  build_www.ps1  build_www.sh  compare_aabb_obb.rs  generate_ggx_lut.rs  ply_to_gcloud.rs  render_trellis_thumbnails.rs  surfel_plane.rs
viewer/: viewer.rs
www/: README.md  index.html
www/examples/: examples.css  examples.js  examples.json  index.html
